--- a/reference/wpu-invitation/countdown/simplyCountdown.theme.default.css
+++ b/reference/wpu-invitation/countdown/simplyCountdown.theme.default.css
@@ -8,6 +8,7 @@
 	width: 50px;
 	height: 50px;
 	padding: 50px;
+	/* padding: 80px; */
 	display: flex;
 	align-items: center;
 	justify-content: center;
