--- a/reference/wpu-invitation/style.css
+++ b/reference/wpu-invitation/style.css
@@ -55,6 +55,7 @@ body {
         font-size: 75%;
     }
     .simply-countdown > .simply-section {
+        /* padding: 70px; */
         padding: 40px;
     }
 }
@@ -65,6 +66,7 @@ body {
     }
     .simply-countdown > .simply-section {
         margin: 5px;
+        /* padding: 70px; */
         padding: 40px;
     }
 }
@@ -75,6 +77,7 @@ body {
     }
     .simply-countdown > .simply-section {
         margin: 3px;
+        /* padding: 45px; */
         padding: 25px;
     }
 }
